Overload the IsInitialized property to update the UI elements  after the device is reconnected.

--- a/APAS__PluginImp/App.config
+++ b/APAS__PluginImp/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="ReadIntervalMillisec" value="200" />
-    <add key="DP831_SN" value="DP8F221800186" />
+    <add key="DP831_SN" value="DP8C194807153" />
     <add key="DP831_OCP_A_CH1" value="0.6"/>
     <add key="DP831_OVP_V_CH1" value="4.6"/>
     <add key="DP831_OCP_A_CH2" value="0.6"/>
