--- a/APAS__PluginImp/APAS_Plugin_RIGOL_DP800s.csproj
+++ b/APAS__PluginImp/APAS_Plugin_RIGOL_DP800s.csproj
@@ -23,6 +23,7 @@
     <DefineConstants>TRACE;DEBUG;_GEN_FAKE_DATA</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -36,11 +37,11 @@
     <Reference Include="APAS__CoreLib, Version=1.0.1.1, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\APAS__CoreLib.1.0.1.1\lib\net461\APAS__CoreLib.dll</HintPath>
     </Reference>
-    <Reference Include="APAS__PluginContract, Version=1.0.13.18, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\APAS__PluginContract.1.0.13.18\lib\net461\APAS__PluginContract.dll</HintPath>
+    <Reference Include="APAS__PluginContract, Version=1.0.16.21, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\APAS__PluginContract.1.0.16.21\lib\net461\APAS__PluginContract.dll</HintPath>
     </Reference>
-    <Reference Include="APAS__SystemServiceContract, Version=1.0.17.24, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\APAS__SystemServiceContract.1.0.17.24\lib\net461\APAS__SystemServiceContract.dll</HintPath>
+    <Reference Include="APAS__SystemServiceContract, Version=1.0.22.29, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\APAS__SystemServiceContract.1.0.22.29\lib\net461\APAS__SystemServiceContract.dll</HintPath>
     </Reference>
     <Reference Include="MathNet.Numerics, Version=4.9.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MathNet.Numerics.4.9.0\lib\net461\MathNet.Numerics.dll</HintPath>
@@ -129,6 +130,7 @@
     <Content Include="Dependencies\halcondotnet.dll" />
     <Content Include="Dependencies\NationalInstruments.Common.dll" />
     <Content Include="Dependencies\NationalInstruments.VisaNS.dll" />
+    <Content Include="lib\halcondotnet.dll" />
     <Resource Include="Resources\rigol_logo.png" />
   </ItemGroup>
   <ItemGroup />
