--- a/APAS__PluginImp/App.config
+++ b/APAS__PluginImp/App.config
@@ -7,8 +7,11 @@
     <add key="DP831_OVP_V_CH1" value="4.6"/>
     <add key="DP831_OCP_A_CH2" value="0.6"/>
     <add key="DP831_OVP_V_CH2" value="4.6"/>
+    <add key="DP831_OCP_A_CH3" value="0.6"/>
+    <add key="DP831_OVP_V_CH3" value="4.6"/>
     <add key="DEF_VSET_CH1" value="3.3" />
     <add key="DEF_VSET_CH2" value="1.6" />
+    <add key="DEF_VSET_CH2" value="3.3" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
