--- a/APAS__PluginImp/APAS_Plugin_RIGOL_DP800s.csproj
+++ b/APAS__PluginImp/APAS_Plugin_RIGOL_DP800s.csproj
@@ -35,13 +35,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="APAS__CoreLib, Version=1.0.1.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\APAS__CoreLib.1.0.1.1\lib\net461\APAS__CoreLib.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\001 APAS__Main\APAS__PluginContract\APAS__PluginContract\bin\Debug\APAS__CoreLib.dll</HintPath>
     </Reference>
     <Reference Include="APAS__PluginContract, Version=1.0.20.25, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\APAS__PluginContract.1.0.20.25\lib\net461\APAS__PluginContract.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\001 APAS__Main\APAS__PluginContract\APAS__PluginContract\bin\Debug\APAS__PluginContract.dll</HintPath>
     </Reference>
     <Reference Include="APAS__SystemServiceContract, Version=1.0.23.30, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\APAS__SystemServiceContract.1.0.23.30\lib\net461\APAS__SystemServiceContract.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\001 APAS__Main\APAS__PluginContract\APAS__PluginContract\bin\Debug\APAS__SystemServiceContract.dll</HintPath>
     </Reference>
     <Reference Include="MathNet.Numerics, Version=4.12.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\MathNet.Numerics.4.12.0\lib\net461\MathNet.Numerics.dll</HintPath>
