--- a/APAS__PluginImp/packages.config
+++ b/APAS__PluginImp/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="APAS__CoreLib" version="1.0.4.4" targetFramework="net48" />
-  <package id="APAS__PluginContract" version="1.0.22.28" targetFramework="net48" />
-  <package id="APAS__SystemServiceContract" version="1.0.29.36" targetFramework="net48" />
+  <package id="CommonMark.NET" version="0.15.1" targetFramework="net48" />
+  <package id="HtmlAgilityPack" version="1.11.30" targetFramework="net48" />
+  <package id="MarkdownRender" version="1.0.0" targetFramework="net48" />
   <package id="MathNet.Numerics" version="4.15.0" targetFramework="net48" />
   <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net461" />
 </packages>
