--- a/APAS__PluginImp/APAS__Plugin_RIGOL_DP800s.csproj
+++ b/APAS__PluginImp/APAS__Plugin_RIGOL_DP800s.csproj
@@ -108,6 +108,9 @@
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Readme.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Page Include="Views\BlinkingIndicator.xaml">
